# adventofcode

./: .classpath  .gitignore  LICENSE  README.md  advent2016.cabal
app/: Main.hs
src/: Day1.hs
src/nl/jonghuis/adventofcode/: Day.java  Day1.java  Day2.java  Day3.java  Day4.java  Day5.java  Day6.java
