name:                advent2016
version:             1.0.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/marcdejonge/advent2016#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day1
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable advent2016
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , text-show
                     , advent2016
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/marcdejonge/advent2016
